Adding entites and API projects
Preparing parent's pom to handle integration tests and serve as spring repository.